# konfidantea

./: .flaskenv  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  run.bat
documentation/: favicon.afdesign  logo.afdesign  logo_horizontal.afdesign  logo_vertical.afdesign
webapp/: __init__.py  db_utils.py  encrypted_secret.py  logger.py  routes.py  secret_utils.py
webapp/static/: add.js  base.css  base.js  glyphicons.css  index.css  manage.js  tools.css  tools.js
webapp/templates/: add.html  base.html  index.html  manage.html  tools.html
