[tool.poetry]
name = "konfidantea"
version = "1.0"
description = ""
authors = ["Vlad Mocanu z00319SB vlad.mocanu.alexandru@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
waitress = "^3.0.0"
flask = "^3.0.3"
sqlalchemy = "^2.0.32"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
cryptography = "^43.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
